# mdlint-obsidian

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
mdlint_obsidian/: __init__.py  cli.py  linter.py  models.py  utils.py
mdlint_obsidian/rules/: __init__.py  callouts.py  code_blocks.py  compatibility.py  embeds.py  footnotes.py  formatting.py  frontmatter.py  math.py  tables.py  wikilinks.py
tests/: test_callouts.py  test_cli.py  test_code_blocks.py  test_compatibility.py  test_embeds.py  test_footnotes.py  test_formatting.py  test_frontmatter.py  test_math.py  test_tables.py  test_wikilinks.py
