[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdlint-obsidian"
version = "0.2.5"
description = "A linter for Obsidian Flavored Markdown files"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["obsidian", "markdown", "linter", "lint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/codeafix/mdlint-obsidian"
Repository = "https://github.com/codeafix/mdlint-obsidian"
Issues = "https://github.com/codeafix/mdlint-obsidian/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
]

[project.scripts]
mdlint = "mdlint_obsidian.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdlint_obsidian*"]
